New update for my PJ Beans

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PJ Beans</title>
     <meta name="author" content="PJ Lester" />
-    <!-- TODO -add keywords and description meta tags -->
+    <meta
+      name="description"
+      content="PJ Beans -Specialty Coffee in the Triple Peaks Library"
+    />
+    <meta
+      name="keywords"
+      content="coffee, cafe, espresso, Triple Peaks, PJ Beans, library cafe"
+    />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="shortcut icon" href="favicon_coffee_bean.ico" />
