--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           Specialty coffee
           <span class="header__accent">in the Triple Peaks Library</span>
         </h1>
+        <p class="header__subtitle"></p>
         <p class="header__description">
           Welcome to our study zone! We’ve got the coffee to energize you and
           the cozy vibes to help you get creative.
